Tue Nov 24 06:46:27 2015  Eric Wong  <e@80x24.org>

	* io.c (rb_gc_for_fd): new helper function
	  (ruby_dup): use rb_gc_for_fd
	  (rb_sysopen): ditto
	  (rb_fdopen): ditto
	  (rb_pipe): ditto
	  [ruby-core:71623] [Feature #11727]

Tue Nov 24 05:13:35 2015  Eric Wong  <e@80x24.org>

	* ext/fiddle/function.c (struct nogvl_ffi_call_args):
	  new struct for GVL release
	  (nogvl_ffi_call): new function
	  (function_call): adjust for GVL release
	  [ruby-core:71642] [Feature #11607]
	* ext/fiddle/closure.c (struct callback_args):
	  new struct for GVL acquire
	  (with_gvl_callback): adjusted original callback function
	  (callback): wrapper for conditional GVL acquire
	* ext/fiddle/depend: add dependencies
	* ext/fiddle/extconf.rb: include top_srcdir for internal.h
	* internal.h (ruby_thread_has_gvl_p): expose for fiddle
	* vm_core.h (ruby_thread_has_gvl_p): moved to internal.h
	* test/fiddle/test_function.rb (test_nogvl_poll): new test

Mon Nov 23 19:53:12 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* configure.in: On Solaris, with gcc, "-std=iso9899:1999"
	  in $ansi_options is often also needed in CPPFLAGS,
	  because some feature definitions vary depending on such
	  standards options.

Mon Nov 23 12:54:39 2015  Hamish Morrison  <hamishm53@gmail.com>

	* configure.in: remove obsolete workarounds for Haiku.

	* dln.c, file.c, io.c: remove obsolete Haiku workarounds.

	* thread_pthread.c: add stack bounds detection for Haiku.

	* signal.c: get stack pointer from signal context on Haiku.
	  [ruby-core:67923] [Bug #10811] [Fix GH-1109]

Mon Nov 23 11:44:11 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* gems/bundled_gems: bump version to minitest-5.8.3

Mon Nov 23 08:55:00 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ChangeLog: fix wrong reference for r52714

Sun Nov 22 22:23:37 2015  Rei Odaira  <Rei.Odaira@gmail.com>

	* gc.c (rb_raw_obj_info): fix compile errors when USE_RGENGC
	  is 0.

Sun Nov 22 21:58:09 2015  Naohisa Goto  <ngotogenome@gmail.com>
